--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    
+    <div>
+        
+    </div>
 </body>
 <script src="js/app.js"></script>
 </html>
