--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>OLX - Buy and Sell for free anywhere in Pakistan with OLX online classifieds</title>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/all.css">
 </head>
-<body>
-    <div>
-        
-    </div>
+<body> 
+
 </body>
+<script src="js/bootstrap.js"></script>
+<script src="js/all.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/app.js"></script>
 </html>
