--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body> 
+<!-- navbar  -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="img/logo.png" width="60px" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <!-- Actual search box -->
+                <div class="form-group has-search">
+                  <span class="fa fa-search form-control-feedback"></span>
+                  <input type="text" class="form-control search" placeholder="Pakistan, Karachi">
+                </div>
+            </li>
+              <li class="nav-item">
+                <div class="form-group has-search">
+                  <span class="fa fa-search form-control-feedback"></span>
+                  <input type="text" class="form-control search" placeholder="Find Cars, Mobile Phones and more...">
+                </div>
+                </li>
+            </div>
+        </div>
+      </nav>
+<!-- navbar  -->
+
+
 
 </body>
 <script src="js/bootstrap.js"></script>
